frontend-v2/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
      version: v2
  template:
    metadata:
      labels:
        component: frontend
        version: v2
    spec:
      containers:
        # - image: 172.30.1.1:5000/myproject/frontend-v1@sha256:digest_hash
        - image: 172.30.1.1:5000/myproject/frontend-v2:latest
          name: frontend-v2
          ports:
            - containerPort: 8080
