frontend-v2/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2-service
  namespace: myproject
spec:
  type: ClusterIP
  ports:
    - name: frontend-v2
      port: 5002
      protocol: TCP
      targetPort: 8080
  selector:
    component: frontend
    version: v2
